--- a/senna.css
+++ b/senna.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #000000;
+    background-color: #c19bf3;
     overflow-x: hidden;
 }
 
@@ -23,7 +23,7 @@ h3 {
     align-items: center; 
     width: 80%; 
     max-width: 900px; 
-    background-color: #dcb8eb;
+    background-color: #000000;
     margin-bottom: 20px;
     padding: 40px;
     border-radius: 20px;
@@ -56,7 +56,6 @@ h3 {
     font-size: 1rem;
     color: #ffffff;
 }
-.h2 
 
 /* @media (max-width: 768px) {
     .card {
@@ -72,4 +71,3 @@ h3 {
     .card-content {
         flex: 1;
     }
- */
